MVC Klasör Yapısı Oluşturuldu. Startup.cs düzenlendi.

--- a/MovieApp/MovieApp.WebUI/MovieApp.WebUI.csproj
+++ b/MovieApp/MovieApp.WebUI/MovieApp.WebUI.csproj
@@ -4,4 +4,20 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+    <Folder Include="Models\" />
+    <Folder Include="wwwroot\" />
+    <Folder Include="Views\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MovieApp.Data\MovieApp.Data.csproj" />
+    <ProjectReference Include="..\MovieApp.Entity\MovieApp.Entity.csproj" />
+  </ItemGroup>
+
 </Project>
