Identity Oluşturuldu. User CRUD işlemleri ve kullanıcı tarafından login işlemleri yapıldı. Role oluşturma yapıldı

--- a/ShowApp/ShowApp.WebUI/appsettings.json
+++ b/ShowApp/ShowApp.WebUI/appsettings.json
@@ -6,5 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ShowAppWebUIContextConnection": "Server=(localdb)\\mssqllocaldb;Database=ShowApp.WebUI;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "EfCoreConnection": "Server=(localdb)\\mssqllocaldb;Database=ShowApp.WebUI;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "IdentityDbaseContextConnection": "Server=(localdb)\\mssqllocaldb;Database=ShowApp.WebUI;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
